@@ -1,0 +1,11 @@
+package = "s3cmd"
+version = "0.9.1"
+url = "http://s3tools.logix.cz"
+license = "GPL version 2"
+short_description = "S3cmd is a tool for managing Amazon S3 storage space."
+long_description = """
+S3cmd lets you copy files from/to Amazon S3 
+(Simple Storage Service) using a simple to use
+command line client.
+"""
+
