@@ -18,6 +18,7 @@ import elementtree.ElementTree as ET
 from S3.S3 import *
 from S3.Config import Config
 from S3.S3Uri import *
+import S3.PkgInfo
 
 def output(message):
 	print message
@@ -120,7 +121,7 @@ def cmd_object_put(args):
 		error("Alternatively use --force argument and the specified")
 		error("object name will be prefixed to all stored filenames.")
 		sys.exit(1)
-
+	
 	for file in files:
 		uri_arg_final = str(uri)
 		if len(files) > 1 or uri.object() == "":
@@ -269,11 +270,11 @@ if __name__ == '__main__':
 	default_verbosity = Config().verbosity
 	optparser = OptionParser(option_class=OptionMimeType, formatter=MyHelpFormatter())
 	#optparser.disable_interspersed_args()
+
 	optparser.set_defaults(config=os.getenv("HOME")+"/.s3cfg")
-	optparser.add_option("-c", "--config", dest="config", metavar="FILE", help="Config file name. Defaults to %default")
 	optparser.set_defaults(verbosity = default_verbosity)
-	optparser.add_option("-d", "--debug", dest="verbosity", action="store_const", const=logging.DEBUG, help="Enable debug output.")
-	optparser.add_option("-v", "--verbose", dest="verbosity", action="store_const", const=logging.INFO, help="Enable verbose output.")
+
+	optparser.add_option("-c", "--config", dest="config", metavar="FILE", help="Config file name. Defaults to %default")
 	optparser.add_option("-H", "--human-readable-sizes", dest="human_readable_sizes", action="store_true", help="Print sizes in human readable form.")
 	optparser.add_option("-f", "--force", dest="force", action="store_true", help="Force overwrite and other dangerous operations.")
 	optparser.add_option("-u", "--show-uri", dest="show_uri", action="store_true", help="Show complete S3 URI in listings.")
@@ -282,6 +283,9 @@ if __name__ == '__main__':
 	optparser.add_option("-M", "--guess-mime-type", dest="guess_mime_type", action="store_true", help="Guess MIME-type of files by their extension. Falls back to default MIME-Type as specified by --mime-type option")
 	optparser.add_option(      "--dump-config", dest="dump_config", action="store_true", help="Dump current configuration after parsin config files and command line options and exit.")
 	optparser.add_option(      "--configure", dest="run_configure", action="store_true", help="Invoke interactive (re)configuration tool.")
+	optparser.add_option("-d", "--debug", dest="verbosity", action="store_const", const=logging.DEBUG, help="Enable debug output.")
+	optparser.add_option("-v", "--verbose", dest="verbosity", action="store_const", const=logging.INFO, help="Enable verbose output.")
+	optparser.add_option(      "--version", dest="show_version", action="store_true", help="Show s3cmd version (%s) and exit." % (S3.PkgInfo.version))
 
 	optparser.set_usage(optparser.usage + " COMMAND [parameters]")
 	optparser.set_description('S3cmd is a tool to manage objects in '+
@@ -289,7 +293,7 @@ if __name__ == '__main__':
 		'"buckets" and uploading, downloading and removing '+
 		'"objects" from these buckets.')
 	optparser.epilog = format_commands(optparser.get_prog_name())
-	optparser.epilog += '\nSee program homepage for more information at\nhttp://www.logix.cz/michal/devel/s3tools\n'
+	optparser.epilog += ("\nSee program homepage for more information at\n%s\n" % S3.PkgInfo.url)
 
 	(options, args) = optparser.parse_args()
 
@@ -297,6 +301,10 @@ if __name__ == '__main__':
 	## debugging/verbose output for config file parser on request
 	logging.basicConfig(level=options.verbosity, format='%(levelname)s: %(message)s')
 	
+	if options.show_version:
+		output("s3cmd version %s" % S3.PkgInfo.version)
+		sys.exit(0)
+
 	## Now finally parse the config file
 	try:
 		cfg = Config(options.config)
